fix layout bug

--- a/src/app/list-btn/list-btn.component.scss
+++ b/src/app/list-btn/list-btn.component.scss
@@ -55,6 +55,6 @@
   .listBtn:hover .selectBtn {
     left: 35px;
     top: 150px;
-    height: fit-content;
+    height: 0px;
   }
 }
